--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,12 @@
   <build>
     <resources>
       <resource>
-        <directory>${basedir}/assets</directory>
+        <directory>src/main/assets</directory>
       </resource>
     </resources>
     <testResources>
       <testResource>
-        <directory>${basedir}/assets</directory>
+        <directory>src/main/assets</directory>
       </testResource>
     </testResources>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
