--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
         <version>5.4.2</version>
         <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.3.0</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
