--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <groupId>inf112.legless-crane</groupId>
+  <artifactId>roborally</artifactId>
+  <version>0.2</version>
 
-  <groupId>inf112.skeleton.app</groupId>
-  <artifactId>mvn-app</artifactId>
-  <version>1.0-SNAPSHOT</version>
-
+  <!-- TODO Remove this? -->
   <name>mvn-app</name>
   <!-- Project website on github -->
   <url>https://github.com/inf112-v20/legless-crane</url>
@@ -19,6 +19,7 @@
   </properties>
 
   <dependencies>
+
     <!-- https://mvnrepository.com/artifact/com.badlogicgames.gdx/gdx -->
     <dependency>
       <groupId>com.badlogicgames.gdx</groupId>
@@ -46,11 +47,20 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.6.0</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- TODO Do we need this? For running tests from junit 4, should avoid that anyway?
+    <dependency>
+      <groupId>org.junit.vintage</groupId>
+      <artifactId>junit-vintage-engine</artifactId>
+      <version>5.6.0</version>
+      <scope>test</scope>
+    </dependency>
+    -->
 
     <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
     <dependency>
@@ -59,14 +69,6 @@
       <version>3.3.0</version>
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <version>RELEASE</version>
-      <scope>test</scope>
-    </dependency>
-
   </dependencies>
 
   <build>
